--- a/_posts/2024-03-26-Agile-방법론.md
+++ b/_posts/2024-03-26-Agile-방법론.md
@@ -2,7 +2,7 @@
 title: "[Plan] Agile 방법론"
 date: 2025-04-07 15:24:00 +0900
 categories: Software Engineering
-tags: [Project Management]
+tags: [Project Management, Agile]
 author: yoonji
 layout: single
 published: true
@@ -10,148 +10,89 @@ published: true
 
 # Agile 방법론
 
-👉🏻 https://agilemanifesto.org/
+👉🏻 [Agile Manifesto](https://agilemanifesto.org/)
 
-<aside>
+## Agile Manifesto (핵심 가치)
 
+> 공정과 도구보다 **개인과의 상호작용**  
+> 포괄적인 문서보다 **작동하는 소프트웨어**  
+> 계약 협상보다 **고객과의 협력**  
+> 계획을 따르기보다 **변화에 대응하기**
 
-공정과 도구보다 **개인과의 상호작용**을
-****포괄적인 문서보다 **작동하는 소프트웨어**를
-****계약 협상보다 **고객과의 협력**을
-****계획을 따르기보다 **변화에 대응하기**를
-가치있게 여긴다.
+## Agile 원칙 (요약)
 
-</aside>
+- 개발 후반부라도 요구사항 변경 수용  
+- 짧은 주기(2주~2개월)로 작동하는 소프트웨어 전달  
+- 비즈니스 관계자와 개발자의 협력 중시  
+- 개발 팀 내부 효율적 소통 = **면대면 대화**  
+- 진척 척도 = **작동하는 소프트웨어**  
+- 지속 가능한 개발 속도 유지  
+- 기술적 탁월성과 좋은 설계에 대한 관심  
+- 단순성(안 하는 일의 양 극대화)  
+- 자기 조직적인 팀 구성  
+- 정기적으로 회고하여 효과성 개선  
 
-- 선언 정리 (한국어)
-  - 개발의 후반부여도 요구사항 변경을 수용할 것
-  - 작동하는 소프트웨어를 자주 전달할 것 (2주 - 2개월)
-  - 날마다 함께 일할 것
-  - 개발 팀 내부에서의 효율적인 소통 = 면대면 대화
-  - 작동하는 소프트웨어를 진척의 주된 척도로 삼을 것
-  - 지속 가능한 개발을 장려하며, 일정한 속도를 계속 유지할 것
-  - 기술적 탁월성 및 좋은 설계에 대한 관심
-  - 안하는 일의 양을 최대화하는 단순성을 갖출 것
-  - 자기 조직적인 팀을 꾸릴 것
-- based on four values + twelve principles that form the basis.
-- principles
-  1. Ensuring customer satisfaction through the early delivery of software.
-  2. Being open to changing requirements in the stages of the development.
-  3. Frequently delivering working software with a main focus on preference for timeframes.
-  4. Promoting collaboration between business stakeholders and developers as an element.
-  5. Structuring the projects around individuals. Providing them with the necessary environment and support.
-  6. Prioritizing face to face communication whenever needed.
-  7. Considering working software as the measure of the progress.
-  8. Fostering development by allowing teams to maintain a pace indefinitely.
-  9. Placing attention on excellence and good design practices.
-  10. Recognizing the simplicity as crucial factor aiming to maximize productivity by minimizing the work.
-  11. Encouraging self organizing teams as the approach to design and build systems.
-  12. Regularly reflecting on how to enhance effectiveness and to make adjustments accordingly.
+👉 [12 Principles of Agile Software](https://agilemanifesto.org/principles.html)
 
-https://www.geeksforgeeks.org/software-engineering-agile-software-development/
+## Agile Software Development
 
-- SW development methodology that values flexibility, collaboration, customer satisfaction
-  - base on the Agile Manifesto(above).
-- iterative & incremental approach to SW development
-  - emphasize the importance of delivering working product quickly & frequently
+- 유연성, 협업, 고객 만족을 중시하는 **SW 개발 방법론**  
+- Agile Manifesto에 기반  
+- **반복적(iterative) & 점진적(incremental)** 접근법  
+- 빠르고 자주 **작동하는 제품을 제공**하는 것을 강조  
 
-### Agile Software development cycle
+### Agile 개발 사이클
 
-1. meet
-2. plan
-3. design
-4. develop
-5. test
-6. evaluate
+1. Meet  
+2. Plan  
+3. Design  
+4. Develop  
+5. Test  
+6. Evaluate  
 
-- 1~6까지, 그리고 6에서 1로 다시 순회하는 구조를 띈다.
+→ 6에서 다시 1로 순환하는 구조
 
-### practices of agile SW development
+## Agile Practices
 
-- scrum: iterative cycle(=sprint), daily stand-up meetings, product backlog를 포함하는 프레임워크이다.
+- **Scrum**: 짧은 반복 주기(sprint), 매일 stand-up, product backlog 관리  
+- **Kanban**: 보드 기반 시각적 관리 (작업 카드/스티키 노트 활용)  
+- **CI (지속적 통합)**: 코드 변경 사항을 공유 저장소에 자주 병합 → 충돌을 조기 식별 및 해결  
+- **TDD (테스트 주도 개발)**: 코드 작성 전 자동화 테스트를 먼저 작성 → 요구사항 충족 검증 & 결함 최소화  
+- **Pair Programming (쌍 프로그래밍)**: 두 개발자가 함께 작업 → 코드 품질 향상, 지식 공유, 결함 감소  
 
-- kanban: 보드와 작업 항목을 나타내는 카드, 스티키 노트들을 포함한 시각적 시스템
+---
 
-- continuous integration: 코드 변경 사항을 자주 병합하여 conflict identify 및 resolving을 early stage에
+📌 참고: [GeeksforGeeks - Agile Software Development](https://www.geeksforgeeks.org/software-engineering-agile-software-development/)
 
-- **지속적인 통합:**
+---
 
-  지속적인 통합은 코드 변경 사항을 공유 저장소에 자주 병합하는 관행으로, 개발 프로세스 초기에 충돌을 식별하고 해결하는 데 도움이 됩니다.
+## Waterfall 모델 (워터폴)
 
-- **테스트 주도 개발:**
+Agile 이전에 가장 널리 쓰였던 전통적 SW 개발 방법론.  
+각 단계가 **순차적(one-way)**으로 진행되어 이전 단계로 돌아가기 어렵다.
 
-  테스트 주도 개발(TDD)은 코드를 작성하기 전에 자동화된 테스트를 작성하는 개발 관행입니다. 이를 통해 코드가 요구 사항을 충족하는지 확인하고 결함 가능성을 줄이는 데 도움이 됩니다.
+### Waterfall 개발 단계
+1. 요구사항 분석 (Requirements)  
+2. 설계 (Design)  
+3. 구현 (Implementation)  
+4. 테스트 (Verification)  
+5. 배포 & 유지보수 (Maintenance)  
 
-- 쌍 **프로그래밍:**
+### 특징
+- **명확한 문서화**와 단계별 산출물 중시  
+- 프로젝트 초기에 요구사항을 최대한 완벽히 정의해야 함  
+- 변경 사항 반영이 어렵고 비용이 큼  
+- **안정성과 예측성**은 뛰어나지만 **유연성**은 낮음  
 
-  쌍 프로그래밍은 두 개발자가 같은 코드에서 함께 작업하는 것을 포함합니다. 이는 코드 품질을 개선하고, 지식을 공유하고, 결함 가능성을 줄이는 데 도움이 됩니다.
-공정과 도구보다 **개인과의 상호작용**을
-****포괄적인 문서보다 **작동하는 소프트웨어**를
-****계약 협상보다 **고객과의 협력**을
-****계획을 따르기보다 **변화에 대응하기**를
-가치있게 여긴다.
+---
 
-</aside>
+## Agile vs Waterfall 비교
 
-- 선언 정리 (한국어)
-  - 개발의 후반부여도 요구사항 변경을 수용할 것
-  - 작동하는 소프트웨어를 자주 전달할 것 (2주 - 2개월)
-  - 날마다 함께 일할 것
-  - 개발 팀 내부에서의 효율적인 소통 = 면대면 대화
-  - 작동하는 소프트웨어를 진척의 주된 척도로 삼을 것
-  - 지속 가능한 개발을 장려하며, 일정한 속도를 계속 유지할 것
-  - 기술적 탁월성 및 좋은 설계에 대한 관심
-  - 안하는 일의 양을 최대화하는 단순성을 갖출 것
-  - 자기 조직적인 팀을 꾸릴 것
-- based on four values + twelve principles that form the basis.
-- principles
-  1. Ensuring customer satisfaction through the early delivery of software.
-  2. Being open to changing requirements in the stages of the development.
-  3. Frequently delivering working software with a main focus on preference for timeframes.
-  4. Promoting collaboration between business stakeholders and developers as an element.
-  5. Structuring the projects around individuals. Providing them with the necessary environment and support.
-  6. Prioritizing face to face communication whenever needed.
-  7. Considering working software as the measure of the progress.
-  8. Fostering development by allowing teams to maintain a pace indefinitely.
-  9. Placing attention on excellence and good design practices.
-  10. Recognizing the simplicity as crucial factor aiming to maximize productivity by minimizing the work.
-  11. Encouraging self organizing teams as the approach to design and build systems.
-  12. Regularly reflecting on how to enhance effectiveness and to make adjustments accordingly.
-
-https://www.geeksforgeeks.org/software-engineering-agile-software-development/
-
-- SW development methodology that values flexibility, collaboration, customer satisfaction
-  - base on the Agile Manifesto(above).
-- iterative & incremental approach to SW development
-  - emphasize the importance of delivering working product quickly & frequently
-
-### Agile Software development cycle
-
-1. meet
-2. plan
-3. design
-4. develop
-5. test
-6. evaluate
-
-- 1~6까지, 그리고 6에서 1로 다시 순회하는 구조를 띈다.
-
-### practices of agile SW development
-
-- scrum: iterative cycle(=sprint), daily stand-up meetings, product backlog를 포함하는 프레임워크이다.
-
-- kanban: 보드와 작업 항목을 나타내는 카드, 스티키 노트들을 포함한 시각적 시스템
-
-- continuous integration: 코드 변경 사항을 자주 병합하여 conflict identify 및 resolving을 early stage에
-
-- **지속적인 통합:**
-
-  지속적인 통합은 코드 변경 사항을 공유 저장소에 자주 병합하는 관행으로, 개발 프로세스 초기에 충돌을 식별하고 해결하는 데 도움이 됩니다.
-
-- **테스트 주도 개발:**
-
-  테스트 주도 개발(TDD)은 코드를 작성하기 전에 자동화된 테스트를 작성하는 개발 관행입니다. 이를 통해 코드가 요구 사항을 충족하는지 확인하고 결함 가능성을 줄이는 데 도움이 됩니다.
-
-- 쌍 **프로그래밍:**
-
-  쌍 프로그래밍은 두 개발자가 같은 코드에서 함께 작업하는 것을 포함합니다. 이는 코드 품질을 개선하고, 지식을 공유하고, 결함 가능성을 줄이는 데 도움이 됩니다.
+| 구분             | Agile                                   | Waterfall                          |
+|------------------|-----------------------------------------|-------------------------------------|
+| 개발 방식        | 반복적·점진적 (Iterative & Incremental) | 순차적 (Sequential)                 |
+| 요구사항 변경    | 수용 가능, 유연함                        | 초기 정의 고정, 변경 비용 큼        |
+| 결과물 전달      | 짧은 주기(2주~2개월)마다 작동 SW 제공    | 최종 단계에서 한 번에 제공          |
+| 고객 참여        | 지속적 협력                              | 초기 요구사항 정의 후 제한적 참여   |
+| 문서화           | 최소한, 작동하는 SW 중심                 | 문서화와 절차 중시                  |
+| 위험 관리        | 초기부터 지속적 피드백                    | 후반에 문제 발견 가능성 ↑           |
