--- a/_posts/2024-03-26-Agile-방법론.md
+++ b/_posts/2024-03-26-Agile-방법론.md
@@ -1,7 +1,7 @@
 ---
 title: "[Plan] Agile 방법론"
 date: 2025-04-07 15:24:00 +0900
-categories: Software Engineering
+categories: Software-Engineering
 tags: [Project Management, Agile]
 author: yoonji
 layout: single
